// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scenario I 1`] = `
<div>
  <div>
    <button
      data-testid="button"
      type="button"
    >
      Move
    </button>
  </div>
</div>
`;

exports[`Scenario I 2`] = `
<div>
  <div>
    {
  "data": null,
  "loading": true,
  "timestamp": 0
}
  </div>
  <div>
    <button
      data-testid="button"
      type="button"
    >
      Move
    </button>
  </div>
</div>
`;

exports[`Scenario I 3`] = `
<div>
  <div>
    {
  "data": "data",
  "loading": false,
  "timestamp": 1572220801001
}
  </div>
  <div>
    <button
      data-testid="button"
      type="button"
    >
      Move
    </button>
  </div>
</div>
`;

exports[`Scenario I 4`] = `
<div>
  <div>
    {
  "data": "data",
  "loading": false,
  "timestamp": 1572220801001
}
  </div>
  <div>
    {
  "data": "data",
  "loading": false,
  "timestamp": 1572220801001
}
  </div>
  <div>
    <button
      data-testid="button"
      type="button"
    >
      Move
    </button>
  </div>
</div>
`;

exports[`Scenario I 5`] = `
<div>
  <div>
    {
  "data": "data",
  "loading": false,
  "timestamp": 1572220801001
}
  </div>
  <div>
    <button
      data-testid="button"
      type="button"
    >
      Move
    </button>
  </div>
</div>
`;

exports[`Scenario I 6`] = `
<div>
  <div>
    <button
      data-testid="button"
      type="button"
    >
      Move
    </button>
  </div>
</div>
`;

exports[`Scenario I 7`] = `
<div>
  <div>
    {
  "data": "data",
  "loading": false,
  "timestamp": 1572220801001
}
  </div>
  <div>
    <button
      data-testid="button"
      type="button"
    >
      Move
    </button>
  </div>
</div>
`;

exports[`Scenario I 8`] = `
<div>
  <div>
    {
  "data": null,
  "loading": true,
  "timestamp": 1572220801001
}
  </div>
  <div>
    {
  "data": null,
  "loading": true,
  "timestamp": 1572220801001
}
  </div>
  <div>
    <button
      data-testid="button"
      type="button"
    >
      Move
    </button>
  </div>
</div>
`;

exports[`Scenario I 9`] = `
<div>
  <div>
    {
  "data": "data",
  "loading": false,
  "timestamp": 1572221162051
}
  </div>
  <div>
    {
  "data": "data",
  "loading": false,
  "timestamp": 1572221162051
}
  </div>
  <div>
    <button
      data-testid="button"
      type="button"
    >
      Move
    </button>
  </div>
</div>
`;

exports[`Scenario I 10`] = `
<div>
  <div>
    {
  "data": null,
  "loading": true,
  "timestamp": 1572221162051
}
  </div>
  <div>
    <button
      data-testid="button"
      type="button"
    >
      Move
    </button>
  </div>
</div>
`;

exports[`Scenario I 11`] = `
<div>
  <div>
    <button
      data-testid="button"
      type="button"
    >
      Move
    </button>
  </div>
</div>
`;

exports[`Scenario I 12`] = `
[
  [
    "New ReactGlobalState created",
  ],
  [
    "Initial state:",
    undefined,
  ],
  [
    "ReactGlobalState update. Path: "x"",
  ],
  [
    "New value:",
    {
      "data": null,
      "numRefs": 0,
      "operationId": "",
      "timestamp": 0,
    },
  ],
  [
    "New state:",
    {
      "x": {
        "data": null,
        "numRefs": 0,
        "operationId": "",
        "timestamp": 0,
      },
    },
  ],
  [
    "ReactGlobalState update. Path: "x.numRefs"",
  ],
  [
    "New value:",
    1,
  ],
  [
    "New state:",
    {
      "x": {
        "data": null,
        "numRefs": 1,
        "operationId": "",
        "timestamp": 0,
      },
    },
  ],
  [
    "ReactGlobalState: useAsyncData data (re-)loading. Path: "x"",
  ],
  [
    "ReactGlobalState update. Path: "x.operationId"",
  ],
  [
    "New value:",
    "C00000000-0000-0000-0000-000000000001",
  ],
  [
    "New state:",
    {
      "x": {
        "data": null,
        "numRefs": 1,
        "operationId": "C00000000-0000-0000-0000-000000000001",
        "timestamp": 0,
      },
    },
  ],
  [
    "ReactGlobalState: useAsyncData data (re-)loaded. Path: "x"",
  ],
  [
    "Data:",
    "data",
  ],
  [
    "ReactGlobalState update. Path: "x"",
  ],
  [
    "New value:",
    {
      "data": "data",
      "numRefs": 1,
      "operationId": "",
      "timestamp": 1572220801001,
    },
  ],
  [
    "New state:",
    {
      "x": {
        "data": "data",
        "numRefs": 1,
        "operationId": "",
        "timestamp": 1572220801001,
      },
    },
  ],
  [
    "ReactGlobalState update. Path: "x.numRefs"",
  ],
  [
    "New value:",
    2,
  ],
  [
    "New state:",
    {
      "x": {
        "data": "data",
        "numRefs": 2,
        "operationId": "",
        "timestamp": 1572220801001,
      },
    },
  ],
  [
    "ReactGlobalState update. Path: "x.numRefs"",
  ],
  [
    "New value:",
    1,
  ],
  [
    "New state:",
    {
      "x": {
        "data": "data",
        "numRefs": 1,
        "operationId": "",
        "timestamp": 1572220801001,
      },
    },
  ],
  [
    "ReactGlobalState update. Path: "x.numRefs"",
  ],
  [
    "New value:",
    0,
  ],
  [
    "New state:",
    {
      "x": {
        "data": "data",
        "numRefs": 0,
        "operationId": "",
        "timestamp": 1572220801001,
      },
    },
  ],
  [
    "ReactGlobalState update. Path: "x.numRefs"",
  ],
  [
    "New value:",
    1,
  ],
  [
    "New state:",
    {
      "x": {
        "data": "data",
        "numRefs": 1,
        "operationId": "",
        "timestamp": 1572220801001,
      },
    },
  ],
  [
    "ReactGlobalState: useAsyncData data (re-)loading. Path: "x"",
  ],
  [
    "ReactGlobalState update. Path: "x.operationId"",
  ],
  [
    "New value:",
    "C00000000-0000-0000-0000-000000000002",
  ],
  [
    "New state:",
    {
      "x": {
        "data": "data",
        "numRefs": 1,
        "operationId": "C00000000-0000-0000-0000-000000000002",
        "timestamp": 1572220801001,
      },
    },
  ],
  [
    "ReactGlobalState update. Path: "x.numRefs"",
  ],
  [
    "New value:",
    2,
  ],
  [
    "New state:",
    {
      "x": {
        "data": "data",
        "numRefs": 2,
        "operationId": "C00000000-0000-0000-0000-000000000002",
        "timestamp": 1572220801001,
      },
    },
  ],
  [
    "ReactGlobalState: useAsyncData data (re-)loaded. Path: "x"",
  ],
  [
    "Data:",
    "data",
  ],
  [
    "ReactGlobalState update. Path: "x"",
  ],
  [
    "New value:",
    {
      "data": "data",
      "numRefs": 2,
      "operationId": "",
      "timestamp": 1572221162051,
    },
  ],
  [
    "New state:",
    {
      "x": {
        "data": "data",
        "numRefs": 2,
        "operationId": "",
        "timestamp": 1572221162051,
      },
    },
  ],
  [
    "ReactGlobalState update. Path: "x.numRefs"",
  ],
  [
    "New value:",
    1,
  ],
  [
    "New state:",
    {
      "x": {
        "data": "data",
        "numRefs": 1,
        "operationId": "",
        "timestamp": 1572221162051,
      },
    },
  ],
  [
    "ReactGlobalState: useAsyncData data (re-)loading. Path: "x"",
  ],
  [
    "ReactGlobalState update. Path: "x.operationId"",
  ],
  [
    "New value:",
    "C00000000-0000-0000-0000-000000000003",
  ],
  [
    "New state:",
    {
      "x": {
        "data": "data",
        "numRefs": 1,
        "operationId": "C00000000-0000-0000-0000-000000000003",
        "timestamp": 1572221162051,
      },
    },
  ],
  [
    "ReactGlobalState: useAsyncData data (re-)loaded. Path: "x"",
  ],
  [
    "Data:",
    "data",
  ],
  [
    "ReactGlobalState update. Path: "x"",
  ],
  [
    "New value:",
    {
      "data": "data",
      "numRefs": 1,
      "operationId": "",
      "timestamp": 1572221523061,
    },
  ],
  [
    "New state:",
    {
      "x": {
        "data": "data",
        "numRefs": 1,
        "operationId": "",
        "timestamp": 1572221523061,
      },
    },
  ],
  [
    "ReactGlobalState update. Path: "x.numRefs"",
  ],
  [
    "New value:",
    0,
  ],
  [
    "New state:",
    {
      "x": {
        "data": "data",
        "numRefs": 0,
        "operationId": "",
        "timestamp": 1572221523061,
      },
    },
  ],
]
`;
